<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:background="@drawable/item_selector">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/pizzaImage"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/pizza_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/pizzaName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/pizza_name"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pizzaStyle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/pizza_style"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/pizzaCrust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/crust_type"
            android:textSize="12sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/pizzaPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/total_zero"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/pizzaToppings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/toppings"
            android:textSize="12sp"
            android:textAlignment="center" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
