<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/pizza_animation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animation" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="256dp"
        android:layout_height="66dp"
        android:layout_marginTop="44dp"
        android:capitalize="none"
        android:text="@string/app_title"
        android:textColor="#FB4D61"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goToOrder"
        android:layout_width="304dp"
        android:layout_height="77dp"
        android:layout_marginBottom="208dp"
        android:backgroundTint="#FB4D61"
        android:text="@string/create_new_order"
        android:textColorLink="#634E9E"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goToOrder2"
        android:layout_width="304dp"
        android:layout_height="77dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#FB4D61"
        android:text="@string/orders_placed"
        android:textColorLink="#634E9E"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goToCart"
        android:layout_width="304dp"
        android:layout_height="77dp"
        android:layout_marginBottom="31dp"
        android:backgroundTint="#FB4D61"
        android:text="@string/view_cart"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToOrder"
        app:layout_constraintVertical_bias="0.13"
        tools:text="@string/view_cart" />

</androidx.constraintlayout.widget.ConstraintLayout>